--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "joi": "^13.6.0",
     "lodash": "^4.17.11",
