--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "joi": "^13.6.0",
+    "joi-password-complexity": "^2.0.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.2.14"
   }
