--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
     "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "joi": "^13.6.0",
+    "express": "^4.16.4",
+    "joi": "^13.7.0",
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.2.14"
+    "mongoose": "^5.3.6"
   }
 }
